# meshgrid-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: EXAMPLES.md  QUICKREF.md
src/: cli.rs  device.rs  firmware.rs  main.rs  protocol.rs  serial.rs  ui.rs
src/commands/: config.rs  info.rs  messaging.rs  mod.rs  network.rs  system.rs  util.rs
