[package]
name = "meshgrid-cli"
version = "0.0.1"
edition = "2021"
description = "CLI tool for meshgrid mesh networking"
license = "MIT"

[dependencies]
# Serial port communication
serialport = "4.3"

# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-serial = "5.4"

# Terminal UI
crossterm = "0.27"
ratatui = "0.25"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
chrono = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Signal handling
ctrlc = "3.4"

# Firmware flashing
espflash = "3.0"
libc = "0.2.180"

[dev-dependencies]
tempfile = "3.9"
